--- a/templates/account/manage/profile.html
+++ b/templates/account/manage/profile.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_head %}
-	<title>User Name</title>
+	<title>{{ request.user.name }}</title>
 	<link rel="stylesheet" type="text/css" href="{% static 'css/account/manage/info.css'%}">
 {% endblock %}
 
@@ -22,42 +22,35 @@
                 </div>
                 <br>
             </div>
-            <div class="col-md-9">
+            <div class="col-md-6">
                 <div class="list-group">
                     <h5 class="list-group-item list-group-item-dark">About</h5>
                     <h6 class="list-group-item">Name: {{ request.user.name }}</h5>
                     <h6 class="list-group-item">Phone: {{ request.user.phone }}</h5>
                     <h6 class="list-group-item">Email: {{ request.user.email }}</h5>
-                    <h6 class="list-group-item">Gender: {{ request.user.gender }}</h5>
+                    {% if request.user.gender == 'M' %}
+                        <h6 class="list-group-item">Gender: Male</h5>
+                    {% elif request.user.gender == 'F' %}
+                        <h6 class="list-group-item">Gender: Female</h5>
+                    {% else %}
+                        <h6 class="list-group-item">Gender: Other</h5>
+                    {% endif %}
                 </div>
                 <br>
-                <h5 class="list-group-item list-group-item-dark">Activity</h5>
-                <table class="table table-bordered table-secondary">
-                    <thead class="thead-dark">
-                      <tr>
-                        <th>Firstname</th>
-                        <th>Lastname</th>
-                        <th>Email</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td>John</td>
-                        <td>Doe</td>
-                        <td>john@example.com</td>
-                      </tr>
-                      <tr>
-                        <td>Mary</td>
-                        <td>Moe</td>
-                        <td>mary@example.com</td>
-                      </tr>
-                      <tr>
-                        <td>July</td>
-                        <td>Dooley</td>
-                        <td>july@example.com</td>
-                      </tr>
-                    </tbody>
-                  </table>
+                
+            </div>
+            <div class="col-md-3">
+                <div class="list-group">
+                    <h5 class="list-group-item list-group-item-dark">Activity</h5>
+                    <a class="list-group-item list-group-item-action" 
+                        href="activity/?what=product-react-list">Product React List</a>
+
+                    <a class="list-group-item list-group-item-action" 
+                        href="activity/?what=favorite-space-list">Favorite Space List</a>
+                        
+                    <a class="list-group-item list-group-item-action" 
+                        href="activity/?what=pinned-product-list">Pinned Product List</a>
+                </div>
             </div>
         </div>
     </div>
